Modified application's URL.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>仙台高専情報システム工学科　力武研究室へようこそ。何もありませんが、ごゆるりと。</p>
 	</article>
 	<article id="nakineko">
-	<iframe src="http://www.rickylab.com/~shun40/Nakineko/" width="600" height="450" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+	<iframe src="http://www.rickylab.com/~shun40/nakineko/" width="600" height="450" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 	</article>
 	</div>
 	</body>
